# new_en_detector

energy_detector/models/: best_fp16.xml  best_infer.xml  best_int8.xml
energy_detector/src/: En_detector.cpp  detector.cpp  energy_detector_node.cpp
energy_detector/test/: test_node_video.cpp
energy_tracker/: CMakeLists.txt  package.xml  setup.cfg  setup.py
energy_tracker/energy_tracker/: energy_tracker_node.py
energy_tracker/energy_tracker/utils/: angleProcessor.py  buffTracker.py  dataProcessor.py  parameterUtils.py
energy_tracker/include/energy_tracker/: energy_extended_kalman_filter.hpp  energy_tracker.hpp  energy_tracker_node.hpp
energy_tracker/resource/examples/1_8mm_red_bright/: parameter.yaml
energy_tracker/resource/examples/2_12mm_red_bright/: parameter.yaml
energy_tracker/resource/examples/3_12mm_red_dark/: parameter.yaml
energy_tracker/resource/examples/4_12mm_blue_dark/: parameter.yaml
energy_tracker/resource/examples/5_old_buff_red_dark/: parameter.yaml
energy_tracker/resource/examples/example_for_prediction/10_dark_red_small_near/: parameter.yaml
energy_tracker/resource/examples/example_for_prediction/6_dark_blue_big/: parameter.yaml
energy_tracker/resource/examples/example_for_prediction/7_dark_red_big/: parameter.yaml
energy_tracker/resource/examples/example_for_prediction/8_dark_blue_small/: parameter.yaml
energy_tracker/resource/examples/example_for_prediction/9_dark_red_small/: parameter.yaml
energy_tracker/src/: energy_extended_kalman_filter.cpp  energy_tracker.cpp  energy_tracker_node.cpp
(+3 files in other folders)
