<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>energy_tracker</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="1074785246@qq.com">dfg</maintainer>
  <license>TODO: License declaration</license>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>target_msg</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>std_srvs</depend>
  <depend>visualization_msgs</depend>
  <depend>message_filters</depend>
  <depend>auto_aim_interfaces</depend>
  <depend>energy_detector</depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
